[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/SleepWindow.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/BasicButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Fonts/default_font_morris_roman_big.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="SleepWindow" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Fader" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "You are asleep"
align = 1

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 1280.0
margin_bottom = 528.0
rect_min_size = Vector2( 0, 350 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 532.0
margin_right = 1280.0
margin_bottom = 632.0
rect_min_size = Vector2( 0, 100 )

[node name="Control4" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )

[node name="WakeUpButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 54.0
margin_right = 561.0
margin_bottom = 100.0
text = "Wake up"

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 565.0
margin_right = 715.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 0 )

[node name="SpendExpButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 719.0
margin_right = 1226.0
margin_bottom = 100.0
text = "Spend Experience Points"

[node name="Control5" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 1230.0
margin_right = 1280.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )

[node name="SkillTreeWindow" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="SkillTreeWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Button" parent="SkillTreeWindow" instance=ExtResource( 2 )]
margin_left = 78.0
margin_top = 50.0
margin_right = 259.0
margin_bottom = 126.0
text = "Back"

[connection signal="tree_entered" from="." to="." method="_on_SleepWindow_tree_entered"]
[connection signal="animation_finished" from="Fader" to="." method="_on_Fader_animation_finished"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/WakeUpButton" to="." method="_on_WakeUpButton_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/SpendExpButton" to="." method="_on_SpendExpButton_button_down"]
[connection signal="button_down" from="SkillTreeWindow/Button" to="." method="_on_Button_button_down"]
